--- a/src/protocom.html
+++ b/src/protocom.html
@@ -7,14 +7,15 @@
 <style>
 body,textarea,input,select{background:0;border-radius:0;font:16px sans-serif;margin:0}.addon,.btn-sm,.nav,textarea,input,select{outline:0;font-size:14px}.smooth{transition:all .2s}.btn,.nav a{text-decoration:none}.container{margin:0 20px;width:auto}@media(min-width:1310px){.container{margin:auto;width:1270px}}.btn,h2{font-size:2em}h1{font-size:3em}.btn{background:#999;border-radius:6px;border:0;color:#fff;cursor:pointer;display:inline-block;margin:2px 0;padding:12px 30px 14px}.btn:hover{background:#888}.btn:active,.btn:focus{background:#777}.btn-a{background:#0ae}.btn-a:hover{background:#09d}.btn-a:active,.btn-a:focus{background:#08b}.btn-b{background:#3c5}.btn-b:hover{background:#2b4}.btn-b:active,.btn-b:focus{background:#2a4}.btn-c{background:#d33}.btn-c:hover{background:#c22}.btn-c:active,.btn-c:focus{background:#b22}.btn-sm{border-radius:4px;padding:10px 14px 11px}label>*{display:inline}form>*{display:block;margin-bottom:10px}textarea,input,select{border:1px solid #ccc;padding:8px}textarea:focus,input:focus,select:focus{border-color:#5ab}textarea,input[type=text]{-webkit-appearance:none;width:13em;outline:0}.addon{box-shadow:0 0 0 1px #ccc;padding:8px 12px}.nav,.nav .current,.nav a:hover{background:#000;color:#fff}.nav{height:24px;padding:11px 0 15px}.nav a{color:#aaa;padding-right:1em;position:relative;top:-1px}.nav .pagename{font-size:22px;top:1px}.btn.btn-close{background:#000;float:right;font-size:25px;margin:-54px 7px;display:none}@media(max-width:500px){.btn.btn-close{display:block}.nav{overflow:hidden}.pagename{margin-top:-11px}.nav:active,.nav:focus{height:auto}.nav div:before{background:#000;border-bottom:10px double;border-top:3px solid;content:'';float:right;height:4px;position:relative;right:3px;top:14px;width:20px}.nav a{display:block;padding:.5em 0;width:50%}}.table th,.table td{padding:.5em;text-align:left}.table tbody>:nth-child(2n-1){background:#ddd}.ico{font:33px Arial Unicode MS,Lucida Sans Unicode}.row{margin:1% 0;overflow:auto}.col{float:left}.table,.c12{width:100%}.c11{width:91.66%}.c10{width:83.33%}.c9{width:75%}.c8{width:66.66%}.c7{width:58.33%}.c6{width:50%}.c5{width:41.66%}.c4{width:33.33%}.c3{width:25%}.c2{width:16.66%}.c1{width:8.33%}@media(max-width:870px){.row .col{width:100%}}.msg{background:#def;border-left:5px solid #59d;padding:1.5em}
 			h1 {
-				    margin: 0.2em 0;
+			margin: 0.2em 0;
     border-bottom: 5px solid;
     margin-bottom: 15px;
     padding-bottom: 5px;
 			}
 			
-.btn-sm{
+.btn-custom{
 font-size: 14px !important;
+padding: 8px !important;
 }			
 		</style>
 	</head>
@@ -38,8 +39,12 @@ font-size: 14px !important;
 	    <div class="container" id="files">
 		<h2>Files</h2>
 		<hr>
-		
-        <table class="table"><thead><tr><th>Name</th><th>Size(kb)</th><th>Action</th></thead>
+		<input type="file" name="fileToUpload" id="fileToUpload" onchange="fileSelected();" hidden >
+		<div class="row">
+			<div class="col c6"><input type="text" name="filetxt" id="filetxt" onclick="document.getElementById('fileToUpload').click();" class="smooth" placeholder="Click to select file" readonly><a href="http://owenversteeg.com" class="btn btn-sm btn-a btn-custom">Upload</a></div>
+			<div class="col c6"><progress id="file" value="55" max="100"> 32% </progress></div>
+		</div>
+		<table class="table"><thead><tr><th>Name</th><th>Size(kb)</th><th>Action</th></thead>
 		<tbody id="file_data">
 		<tr><td>blon</td><td>5</td><td>kkkk</td></tr>
 		</tbody></table>
@@ -93,7 +98,7 @@ d.innerHTML = "";
 for(var a in data["values"]){
 let item=data["values"][a];
 var b=document.createElement('tr');
-b.innerHTML ='<td >'+item[1]+'</td><td>'+parseFloat(parseInt(item[0])/1024).toFixed(2)+' KB</td><td><a class="btn btn-c btn-sm smooth" onclick="excluir_arquivo(\''+item[1]+'\');">Delete</a></td>';
+b.innerHTML ='<td >'+item[1]+'</td><td>'+parseFloat(parseInt(item[0])/1024).toFixed(2)+' KB</td><td><a class="btn btn-c btn-sm btn-custom smooth" onclick="excluir_arquivo(\''+item[1]+'\');">Delete</a></td>';
 d.appendChild(b);
 }
 });
@@ -111,5 +116,32 @@ document.addEventListener("DOMContentLoaded", function(e) {
    exec_files();
 });
 
+</script>
+
+<input type="file" onchange="upload(this.files[0])">
+
+<script>
+function upload(file) {
+  let xhr = new XMLHttpRequest();
+
+  // listen for upload progress
+  xhr.upload.onprogress = function(event) {
+    let percent = Math.round(100 * event.loaded / event.total);
+    console.log(`File is ${percent} uploaded.`);
+  };
+
+  // handle error
+  xhr.upload.onerror = function() {
+    console.log(`Error during the upload: ${xhr.status}.`);
+  };
+
+  // upload completed successfully
+  xhr.onload = function() {
+    console.log('Upload completed successfully.');
+  };
+
+  xhr.open('POST', 'https://domain.com/upload');
+  xhr.send(file);
+}
 </script>
 </html>
