--- a/src/protocom.html
+++ b/src/protocom.html
@@ -16,7 +16,10 @@ body,textarea,input,select{background:0;border-radius:0;font:16px sans-serif;mar
 .btn-custom{
 font-size: 14px !important;
 padding: 8px !important;
-}			
+}
+.smooth_file{padding: 5px;}
+table{border-collapse: collapse !important; width: 100%;}
+table td {padding: 2px !important;}
 		</style>
 	</head>
 	<body>
@@ -39,33 +42,15 @@ padding: 8px !important;
 	    <div class="container" id="files">
 		<h2>Files</h2>
 		<hr>
-		<input type="file" name="fileToUpload" id="fileToUpload" onchange="fileSelected();" hidden >
 		<div class="row">
-			<div class="col c6"><input type="file" onchange="upload(this.files[0])"><input type="text" name="filetxt" id="filetxt" onclick="document.getElementById('fileToUpload').click();" class="smooth" placeholder="Click to select file" readonly><a href="http://owenversteeg.com" class="btn btn-sm btn-a btn-custom">Upload</a></div>
-			<div class="col c6"><progress id="file" value="55" max="100"> 32% </progress></div>
+			<div class="col c12"><input type="file" id="fupdate" name="fupdate" class="smooth smooth_file">&nbsp;<button class="btn btn-sm btn-a btn-custom" onclick="upload();">Upload</button></div>
+			
 		</div>
-		<table class="table"><thead><tr><th>Name</th><th>Size(kb)</th><th>Action</th></thead>
+		<table class="table"><thead><tr><th style="width:50%">Name</th><th style="width:25%">Size(kb)</th><th style="width:25%">Action</th></thead>
 		<tbody id="file_data">
 		<tr><td>blon</td><td>5</td><td>kkkk</td></tr>
 		</tbody></table>
-					
 		</div>
-		
-		
-		
-		
-		<!--<div class="container">
-			<h1>Example</h1>
-			<p>You can view the source of this page and copy it to get a quick start on a project with Min! You can view the source of this page and copy it to get a quick start on a project with Min! You can view the source of this page and copy it to get a quick start on a project with Min! You can view the source of this page and copy it to get a quick start on a project with Min! You can view the source of this page and copy it to get a quick start on a project with Min! You can view the source of this page and copy it to get a quick start on a project with Min! You can view the source of this page and copy it to get a quick start on a project with Min! You can view the source of this page and copy it to get a quick start on a project with Min!</p>
-			<h1>Doing things!</h1>
-			<p>Enter how many dollars you want! <span class="addon">$</span><input type="text" class="smooth"> You can view the source of this page and copy it to get a quick start on a project with Min!</p>
-			<h1>Do we like numbers?</h1>
-			<table class="table"><thead><tr><th>#</th><th>Widgets Sold</th><th>Revenue (£)</th><th>Profit (£)</th></tr></thead><tbody><tr><td>1</td><td>5</td><td>10</td><td>2</td></tr><tr><td>2</td><td>10</td><td>20</td><td>4</td></tr><tr><td>3</td><td>500</td><td>1000</td><td>200</td></tr></tbody></table>
-			<h1>Conclusions ☺ ☻</h1>
-			<i class="ico">We like chess. ♠ ♣ ♥ ♦ ♪ ♛ ♜ ♝ ♞ ♟</i>
-			<br><i class="ico">We like phones! ☎</i>
-			<br><i class="ico">We like arrows! ⇦ ⇧ ⇨ ⇩</i>
-		</div>-->
 	</body>
 	
 <script>
@@ -116,10 +101,10 @@ document.addEventListener("DOMContentLoaded", function(e) {
    exec_files();
 });
 
-function upload(file) {
+function upload() {
   let xhr = new XMLHttpRequest();
-
-
+  var fd = new FormData();
+  fd.append("file", document.getElementById('fupdate').files[0]);
   // listen for upload progress
   xhr.upload.onprogress = function(event) {
     let percent = Math.round(100 * event.loaded / event.total);
@@ -127,19 +112,18 @@ function upload(file) {
   };
 
   // handle error
-  xhr.upload.onerror = function() {
-    console.log(`Error during the upload: ${xhr.status}.`);
+  xhr.upload.onerror = function(err) {
+      console.log(`Error during the upload: ${xhr.status}.` + err);
   };
 
   // upload completed successfully
-  xhr.onload = function() {
-    console.log('Upload completed successfully.');
+  xhr.onload = function(evt) {
+    	exec_files();
+        alert(JSON.parse(evt.target.responseText).message);
   };
 
   xhr.open('POST', server + '/upload');
-  xhr.setRequestHeader('Access-Control-Allow-Headers', '*');
-  xhr.setRequestHeader('Access-Control-Allow-Origin', '*');
-  xhr.send(file);
+  xhr.send(fd);
 }
 </script>
 </html>
